--- a/src/Component/Home/Home.module.css
+++ b/src/Component/Home/Home.module.css
@@ -1,3 +1,4 @@
+
 .userImg{
     width: 109px;
     height: 106px;
@@ -9,6 +10,7 @@ a{
 }
 #conatiner{
     width: 80vw;
+    color: #fff;
 }
 
 .line{
